Исправил. Теперь все красиво.